# docq

./: .gitignore  README.md  pyproject.toml
docq/: __init__.py  __main__.py  chunking.py  cli.py  config.py  indexer.py  llm.py  parsers.py  watcher.py
